feat: new card-list

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card list</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <section class="card-area">
-        <p class="text-color-primary text-strong"><span>+</span> Acionar Lista</p>
+    <section id="board" class="board">
+        <div id="card-area" class="card-area" onclick="create_card_list()">
+            <p class="text-color-primary text-strong">+ Acionar Lista</p>
+        </div>
     </section>
+
+    <script src="dist/app.js"></script>
 </body>
 </html>
