wip: card-list style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <section id="board" class="board">
-        <div id="card-area" class="card-area" onclick="create_card_list()">
-            <p class="text-color-primary text-strong">+ Acionar Lista</p>
+        <div id="card-list-area" class="card-list-area" onclick="create_card_list()">
+            <div class="card-list-content">
+                <p class="text-color-primary text-strong">+ Acionar Lista</p>
+            </div>
         </div>
     </section>
 
